snapshots/care/data4life/hc-result-sdk-kmp/error/maven-metadata.xml.sha256
f61a82aa8d8c6fa0b2cd0b63838ac050f0c6eafa611ae2bf5e406b84e9e5523b